--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -5,7 +5,7 @@
   }
 </style> 
 <main id="account-addresses" class="customer">  
-<section class="index-padding flex-container">
+<section class="index-padding flex-container-do">
    <div class="third accent-padding">
         <h3 class="accent">Your Account</h3>
         <ul>
