mobile friendly account page

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -197,12 +197,12 @@ img { max-width: 100%; }
     background-image: url("{{'flow-paca.png' | asset_url}}"); 
     background-position: bottom right;
   }
-  #account-addresses .third {
+  #account-addresses .third, #account .third {
     width: 100%;
     text-align: center;
     box-sizing: border-box;
 }
-#account-addresses .two-thirds {
+#account-addresses .two-thirds, #account .two-thirds {
   width: 100%;
   box-sizing: border-box;
 }
