removes webkit appearance and border from quantity on ajax cart

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1297,4 +1297,4 @@ table .lg { background-color: #d1cdcd; }
 #account .current, #account-addresses .current { border-bottom: 2px solid  #d1cdcd; padding-bottom: 2px; }
 #order-history { border-radius: 20px; }
 .checkbox { vertical-align: middle; }
-
+.ajaxcart__qty button, .ajaxcart__qty input {     -webkit-appearance: none; border: none;  }
