--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -97,7 +97,7 @@
     <span></span>
     <span></span>
   </div>
-  <img src="{{'pacas.png' | asset_url}}"  class="jlogo"/>
+  <a href="/"><img src="{{'pacas.png' | asset_url}}"  class="jlogo"/></a>
   <img src="{{'cart.png' | asset_url}}" id="mobile-cart"/>
  </nav> 
  
@@ -108,17 +108,13 @@
     <h4 class="tac collection-prod clickable"> Women's <span class="fr">></span></h4>
     <div class="childlink" style="display: none;">
       <div class="flex-container-no jcc">
-        <a href="/collections/womens-athletic">
-          <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
-            <p>Athletic</p>
-            <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-          </div>
+        <a href="/collections/womens-athletic" class="half-no background-blue accent-padding drawer-collection-wrapper tac"> 
+          <p>Athletic</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </a>
-        <a href="womens-casual">
-          <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+        <a href="womens-casual" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
             <p>Casual</p>
             <img src="{{'bombas_socksample.png' | asset_url}}" class=" fw"/>
-          </div>
         </a>
       </div>
     </div>
@@ -127,21 +123,21 @@
     <h4 class="tac collection-prod clickable"> Men's <span class="fr">></span></h4>
     <div class="childlink" style="display: none;">
       <div class="flex-container-no jcc">
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+        <a href="/collections/mens-athletic" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Athletic</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+        </a>
+        <a href="/collections/mens-casual" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
+        </a>
       </div>
       <div class="flex-container-no jcc">
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+        <a href="/collections/mens-dress" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Dress</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-        <div class="half-no drawer-collection-wrapper ">
+        </a>
+        <div class="half-no drawer-collection-wrapper accent-padding tac">
         </div>
       </div>
     </div>
@@ -150,22 +146,14 @@
     <h4 class="tac collection-prod clickable"> Kid's <span class="fr">></span></h4>
     <div class="childlink" style="display: none;">
       <div class="flex-container-no">
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+        <a href="/collections/kids-athletic" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Athletic</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+        </a>
+        <a href="/collections/kids-casual" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-      </div>
-      <div class="flex-container-no">
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
-          <p>Dress</p>
-          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-        <div class="half-no drawer-collection-wrapper ">
-        </div>
+        </a>
       </div>
     </div>
   </div>
