adds in some sample background images to get the feel for the collections pages while we wait on actual product images

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -900,13 +900,65 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 .collection .three-fourths .flex-container { flex-wrap: wrap; padding-bottom: 50px; }
 .border-bottom-darkgray { border-bottom: 2px solid #7b8284; }
 .border-bottom-gray { border-bottom: 1px solid  #d1cdcd;}
+
+.collection .page-header {
+  background-repeat: no-repeat; 
+}
+/*womens*/
 #c110002667620 .page-header {
   background-color: #fdf3ed;
 }
-
-#c110002012260 .page-header {
-  background-color:  whitesmoke;
+/*kids*/
+#c110012825700 .page-header{
+  background-image: url({{'all-kids.png' | asset_url}});
+     background-position: left bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #E0BC2E;
+    color: white; 
 }
+/* kids athletic */
+#c113430003812 .page-header {
+  background-image: url({{'all-kids.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #E0BC2E;
+  color: white; 
+}
+#c113429676132 .page-header {
+  background-image: url({{'all-kids.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #E0BC2E;
+  color: white; 
+}
+/*mens*/
+#c110002012260 .page-header {
+  background-color: #EFEEF0;
+  background-image: url({{'sample-background.jpeg' | asset_url}});
+  background-position: left bottom; 
+  background-size: cover;
+}
+/*mens athletic*/
+#c113429217380 .page-header {
+  background-image: url({{'mens-athletic.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #AECFD8;
+}
+/*mens casual */
+#c113429217380 .page-header {
+  background-image: url({{'mens-athletic.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #AECFD8;
+}
+
+
 .collection-circle {
     width: 10px;
     height: 10px;
@@ -1294,7 +1346,10 @@ table .lg { background-color: #d1cdcd; }
     list-style: none;
     padding-left: 0;
 }
+
+
+
 #account .current, #account-addresses .current { border-bottom: 2px solid  #d1cdcd; padding-bottom: 2px; }
 #order-history { border-radius: 20px; }
 .checkbox { vertical-align: middle; }
-.ajaxcart__qty button, .ajaxcart__qty input {     -webkit-appearance: none; border: none;  }
+.ajaxcart__qty button, .ajaxcart__qty input { -webkit-appearance: none; border: none;  }
