--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -906,7 +906,30 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 }
 /*womens*/
 #c110002667620 .page-header {
-  background-color: #fdf3ed;
+  background-color: #8FC5D1;
+  background-image: url({{'all-womens.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: white;
+}
+/*womens athletic*/
+#c113429512292 .page-header {
+  background-image: url({{'womens-athletic.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #B9D6E2;
+  color: white; 
+}
+/* womens casual */
+#c113429446756 .page-header {
+  background-image: url({{'womens-casual.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #9ABDCB;
+  color: white;
 }
 /*kids*/
 #c110012825700 .page-header{
@@ -947,17 +970,27 @@ body section #shaver.rotate { transform: rotate(-10deg); }
   background-position: left bottom;
   background-size: contain;
   background-repeat: no-repeat;
-  background-color: #AECFD8;
+  background-color: #1C89CB;
+  color: white;
 }
 /*mens casual */
-#c113429217380 .page-header {
-  background-image: url({{'mens-athletic.png' | asset_url}});
+#c113429020772 .page-header {
+  background-image: url({{'mens-casual.jpeg' | asset_url}});
   background-position: left bottom;
   background-size: contain;
   background-repeat: no-repeat;
-  background-color: #AECFD8;
+  background-color: #2094D1;
+  color: white;
 }
-
+/*mens dress*/
+#c113429348452 .page-header {
+  background-image: url({{'mens-dress1.png' | asset_url}});
+  background-position: left bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #743240;
+  color: white;
+}
 
 .collection-circle {
     width: 10px;
