adds the ability to filter by style on men's and women's pages

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -895,6 +895,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
     width: 20%;
     box-sizing: border-box;
 }
+.selected { background: #d1cdcd; }
 .collection .quarter { max-width: 200px; }
 .collection .three-fourths { padding: 50px 20px; }
 .collection .three-fourths .flex-container { flex-wrap: wrap; padding-bottom: 50px; }
@@ -1226,7 +1227,7 @@ table .lg { background-color: #d1cdcd; }
 
 /* mobile nav drawer */
 .mobile-drawer {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 80%;
   z-index: 999;
