adds in the next steps

--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,3 +1,10 @@
+<!-- 
+Filter packs
+Filter colors
+Only show relevant Filters 
+Add in a shop all button to the nave 
+Mobile styles -->
+
 <main id="c{{ collection.id }}" class="collection">
   {%for tag in collection.tags %}
     {% case tag %} 
