styles the order details page to match the mockup provided by Jess

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1376,7 +1376,7 @@ table .lg { background-color: #d1cdcd; }
     margin-top: -20px;
     margin-right: 10px;
 }
-#account ul, #account-addresses ul {
+#account ul, #account-addresses ul, #account-order ul {
     list-style: none;
     padding-left: 0;
 }
