--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -1,29 +1,42 @@
+<style>
+  nav {
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
+    background: white;
+  }
+</style> 
 <main id="account-order" class="customer">       
-  <section class="index-padding flex-container">
-    <div class="third accent-padding">
-      <div class="title-border"></div>
-        <h2>Your Account</h2>
+ <section class="index-padding flex-container-do">
+   <div class="third accent-padding">
+        <h3 class="accent">Your Account</h3>
         <ul>
-          <li><h3><a href="/account" class="text-green"">your orders</a></h3></li>
-          <li><h3><a href="/account/addresses" class="text-green">view addresses</a></h3></li>
-          <li><h3><a href="/pages/contact-us" class="text-green">contact Gekks</a></h3></li>
-          <li><h3><a href="/account/logout" class="text-green" id="customer_logout_link">logout</a></h3></li>
+          <li><h4><a href="/account">Your Orders</a></h4></li>
+          <li><h4><a href="/account/addresses">View Addresses</a></h4></li>
+          <li><h4><a href="/pages/contact-us">Contact Pacas</a></h4></li>
+          <li><h4><a href="/account/logout" id="customer_logout_link">Logout</a></h4></li>
         </ul>
       </div>
-      <div class="two-thirds accent-padding background-lightgray">
+      <div class="two-thirds accent-padding">
         <div class="accent-padding">
-        <h3 class="text-green nmb">Order <span>{{ order.name }}</span></h3>
+        <h4 class="nmb">Order <b>{{ order.name }}</b></h4>
         {% if order.cancelled %}
-          <p class="subscript nm"><span>Order cancelled on {{ order.cancelled_at | date: "%B %d, %Y %I:%M%p" }}</span></p>
+          <p class="subscript nm"><b>Order cancelled on {{ order.cancelled_at | date: "%B %d, %Y %I:%M%p" }}</b></p>
         {% endif %}
-          <p class="subscript nm"><span>Placed on {{ order.created_at | date: "%B %d, %Y %I:%M%p" }}</span></p>
-          <p class="subscript nm"><span>Payment Status: {{ order.financial_status }}</span></p>
-          <p class="subscript nm"><span>Fulfillment Status: {{ order.fulfillment_status }}</span></p>
+          <p class="subscript nm"><b>Placed on {{ order.created_at | date: "%B %d, %Y %I:%M%p" }}</b></p>
+          <p class="subscript nm"><b>Payment Status: {{ order.financial_status }}</b></p>
+          <p class="subscript nm"><b>Fulfillment Status: {{ order.fulfillment_status }}</b></p>
+               {% if line_item.fulfillment %}
+            <p class="subscript nm">
+            Fulfilled {{ line_item.fulfillment.created_at | date: "%b %d" }}
+            {% if line_item.fulfillment.tracking_number %}
+            <a href="{{ line_item.fulfillment.tracking_url }}">{{ line_item.fulfillment.tracking_company }} #{{ line_item.fulfillment.tracking_number}}</a>
+            {% endif %}
+            </p>
+          {% endif %}
         </div>
           <div class="flex-container-no border-white">
            <div class="half accent-padding">
-              <p class="nm"><span>Billing Address</span></p>
-              <p class="subscript nm">{{ order.billing_address.name }}<br/>
+              <p class="nm"><b>Billing Address</b></p>
+              <p class="subscript nm">{{ order.billing_address.name }}<br>
               {% if order.billing_address.company != '' %}{{ order.billing_address.company }}<br/>{% endif %}
               {{ order.billing_address.street }}<br/>
               {{ order.billing_address.city }}, {{ order.billing_address.province }}<br/>
@@ -32,8 +45,8 @@
            </div>
           {% if order.shipping_address %}
            <div class="half accent-padding">
-            <p class="nm"><span>Shipping Address</span></p>
-            <p class="subscript nm">{{ order.shipping_address.name }}<br/>
+            <p class="nm"><b>Shipping Address</b></p>
+            <p class="subscript nm">{{ order.shipping_address.name }}<br>
               {% if order.shipping_address.company != '' %}{{ order.shipping_address.company }}<br/>{% endif %}
             {{ order.shipping_address.street }}<br/>
             {{ order.shipping_address.city }}, {{ order.shipping_address.province }}<br/>
@@ -44,20 +57,28 @@
          </div>
          <div class="accent-padding">
         {% for line_item in order.line_items %}
-          <p class="subscript"><strong>{{ line_item.title | link_to: line_item.product.url }}</strong><br/>
-          SKU: {{ line_item.sku }}<br/>
-          Quantity: {{ line_item.quantity }}<br/>
-          Price: {{ line_item.price | money }}
-          {% if line_item.quantity > 1 %}<br/>Total: {{ line_item.quantity | times: line_item.price | money }}{% endif %}
-          </p>
-          {% if line_item.fulfillment %}
-            <p class="subscript">
-            Fulfilled {{ line_item.fulfillment.created_at | date: "%b %d" }}
-            {% if line_item.fulfillment.tracking_number %}
-            <a href="{{ line_item.fulfillment.tracking_url }}">{{ line_item.fulfillment.tracking_company }} #{{ line_item.fulfillment.tracking_number}}</a>
-            {% endif %}
-            </p>
-          {% endif %}
+
+          <div class="border-bottom-gray">
+                <div class="flex-container-no">
+                  <div class="quarter accent-padding">
+                    <a href="{{ item.url}}">
+                      <img src="{{ line_item.product.featured_image | product_img_url: 'large' }}"  alt="{{ item.product.title }}" class="fw">
+                    </a>
+                  </div>
+                  <div class="line-item-details  half asfs accent-padding">
+                    <h5 class="nmb">{{line_item.product.title}}</h5>
+                    <p class="nm subscript">
+                      {% assign variant-options = line_item.variant.title | split: '/' %}
+                      Color: {{ variant-options | first }} <br>
+                      Size: {{ variant-options | last }} <br>
+                      <span>Qty:</span> {{line_item.quantity}} @ {{ line_item.line_price | divided_by: line_item.quantity | money }}</p>
+                    </p>
+                  </div>
+                  <div class="price-details quarter asfs">
+                    <h5 class="tar">{{ line_item.line_price | money}} </h5>
+                  </div>
+                </div>
+              </div>
         {% endfor %}
           <p class="subscript"><strong>Subtotal:</strong> {{ order.subtotal_price | money }}<br>
           {% for shipping_method in order.shipping_methods %}
