--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -36,6 +36,12 @@
   </div> 
   <div class="mens desktop-collections" style="display: none;">
     <div class="flex-container-no jcc accent-padding-to">
+        <a href="/collections/mens">
+          <div class="background-blue tac desktop-type-wrapper">
+            <p>Shop All</p>
+            <img src="{{'bombas_socksample.png' | asset_url}}"/>
+          </div> 
+        </a>
         <a href="/collections/mens-athletic">
           <div class="background-blue tac desktop-type-wrapper">
             <p>Athletic</p>
@@ -58,6 +64,12 @@
   </div> 
   <div class="kids desktop-collections" style="display: none;">
     <div class="flex-container-no jcc accent-padding-to">
+       <a href="/collections/kids">
+        <div class="background-blue tac desktop-type-wrapper">
+          <p>Shop All</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}"/>
+        </div> 
+      </a>
       <a href="/collections/kids-athletic">
         <div class="background-blue tac desktop-type-wrapper">
           <p>Athletic</p>
@@ -74,6 +86,12 @@
   </div> 
   <div class="womens desktop-collections" style="display: none;">
     <div class="flex-container-no jcc accent-padding-to">
+       <a href="/collections/womens">
+        <div class="background-blue tac desktop-type-wrapper">
+          <p>Shop All</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}"/>
+        </div> 
+      </a>
       <a href="/collections/womens-athletic">
         <div class="background-blue tac desktop-type-wrapper">
           <p>Athletic</p>
@@ -117,6 +135,14 @@
             <img src="{{'bombas_socksample.png' | asset_url}}" class=" fw"/>
         </a>
       </div>
+      <div class="flex-container-no jcc">
+        <a href="/collections/womens" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Shop All</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </a>
+        <div class="half-no drawer-collection-wrapper accent-padding tac">
+        </div>
+      </div>
     </div>
   </div>
   <div class="accent-padding border-bottom-gray">
@@ -137,8 +163,10 @@
           <p>Dress</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </a>
-        <div class="half-no drawer-collection-wrapper accent-padding tac">
-        </div>
+        <a href="/collections/mens" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Shop All</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </a>
       </div>
     </div>
   </div>
@@ -154,6 +182,14 @@
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
         </a>
+      </div>
+      <div class="flex-container-no jcc">
+        <a href="/collections/kids" class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+          <p>Shop All</p>
+          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+        </a>
+        <div class="half-no drawer-collection-wrapper accent-padding tac">
+        </div>
       </div>
     </div>
   </div>
