--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -895,13 +895,15 @@ body section #shaver.rotate { transform: rotate(-10deg); }
     margin: 0 20px 20px 0;
     border: 1px solid #d1cdcd;
     border-radius: 5%;
-    width: 20%;
     box-sizing: border-box;
+    display: inline-block;
+    width: 29%;
+    max-width: fit-content;
 }
 .selected { background: #d1cdcd; }
 .collection .quarter { max-width: 200px; }
 .collection .three-fourths { padding: 50px 20px; }
-.collection .three-fourths .flex-container { flex-wrap: wrap; padding-bottom: 50px; }
+.collection .three-fourths .flex-container { padding-bottom: 50px; }
 .border-bottom-darkgray { border-bottom: 2px solid #7b8284; }
 .border-bottom-gray { border-bottom: 1px solid  #d1cdcd;}
 
