--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,5 +1,4 @@
 <!-- 
-Filter packs
 Filter colors
 Only show relevant Filters 
 Desktop Styles
@@ -70,7 +69,7 @@ Mobile styles -->
       <div class="three-fourths fw">
         {% if athletic == true %}
           <h3 class="nm accent-padding-tb athletic-tag">Athletic</h3>
-          <div class="flex-container border-bottom-gray athletic-tag">
+          <div class="border-bottom-gray athletic-tag">
             {% for product in collection.products %}
               {% for tag in product.tags %}
                 {% if tag == "Athletic" %}
@@ -97,7 +96,7 @@ Mobile styles -->
          {% endif %}
          {% if casual == true %}
             <h3 class="nm accent-padding-tb casual-tag">Casual</h3>
-            <div class="flex-container border-bottom-gray casual-tag">
+            <div class="border-bottom-gray casual-tag">
               {% for product in collection.products %}
                 {% for tag in product.tags %}
                   {% if tag == "Casual" %}
@@ -124,7 +123,7 @@ Mobile styles -->
           {% endif %}
       {% if dress == true  %}
             <h3 class="nm accent-padding-tb dress-tag">Dress</h3>
-            <div class="flex-container border-bottom-gray dress-tag">
+            <div class="border-bottom-gray dress-tag">
       {% for product in collection.products %}
         {% for tag in product.tags %}
           {% if tag == "Dress" %}
