updates the desktop atf

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,10 +1,12 @@
 <main id="index">
-<section class="page-header" id="atf">
-  <div id="header-spreader">
-  <h1 class="ttu nm"><em>Cozy Fleece</em></h1>
-  <h2 class="accent nm tac"><em>to</em></h2>
-  <h1 class=" ttu nm tar"><em>Comfy Feet</em></h1>
-</div>
+<section class="page-header flex-container-no" id="atf">
+  <div class="ib">
+  <h3 class="nm">Comfort Every<br>Step of the Way</h3>
+  <p>Buttery soft socks made from <br>luxurious, all natural alpaca fleece.</p>
+    <div class="button ib" id="cta">
+      <a href="/collections/women"><p class="nm tac">Shop Collection</p></a>
+    </div>
+  </div>
 </section>
 <section class="page-header tac">
   <img src="{{'paca-icon.png' | asset_url}}"  class="icon"/>
