--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -104,7 +104,7 @@ img { max-width: 100%; }
     margin-top: 100px;
     margin-left: 400px;
   }
-  #atf  { height: 50vw; }
+  #atf  { height: 40vw; }
 
 } 
 @media only screen and (min-width: 1401px){
@@ -143,7 +143,7 @@ img { max-width: 100%; }
   #faq .page-header {  height: 300px; }
   p, table { font-size: 10pt; } 
   footer { padding: 50px; }
-  #atf  { height: 75vw; max-height: 600px; }
+  #atf  { height: 40vw; max-height: 600px; }
   #paca-intro, #charity-slide { 
     background-image: url("{{'dflow-paca.png' | asset_url}}"); 
     background-position: bottom left;
@@ -474,11 +474,12 @@ footer form {
   background-image: url("{{'atf.png' | asset_url}}");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: 30vw bottom;
   background-color: #fdf3ed;
   box-sizing: border-box;
 
  }
+ #cta { width: 190px; }
  #index .flex-container-no .icon { margin-right: 10px; }
 .sock-preview img {
     width: 80%;
@@ -493,8 +494,6 @@ footer form {
     margin-left: -20%;
 }
 .current { border-bottom: 1px solid #7b8284; }
-#atf  h1, #atf h2 { transform: rotate(-15deg); }
-
 #give-the-gift {
     background-image: url("{{'gift.png' | asset_url}}");
     background-size: cover;
