--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -175,7 +175,7 @@ nav {
           <h4 class="nm">Non-itchy & Hypoallergenic</h4>
           <p>Alpaca fleece is naturally smooth and short, with<br> no grease, providing the ultimate comfort.</p>
         </div>
-    <div class="flex-container-no">
+    <div class="flex-container-no" id="side-paca-text">
       <div class="half-no">
       </div>
       <div class="half-no">
@@ -198,36 +198,36 @@ nav {
       <div class="flex-container product-benefits-wrapper">
         <div class="tac half">
           <img src="{{'crown.png' | asset_url}}" class="icon" />
-          <h4>Soft as Cashmere</h4>
+          <h4 class="nmt">Soft as Cashmere</h4>
           <p>Our luxurious and rare<br> alpaca fleece comes<br> straight from their native<br> Incan lands of Peru.</p>
         </div>
         <div class="tac half">
           <img src="{{'flame.png' | asset_url}}" class="icon" />
-          <h4>Warmer than Wool</h4>
+          <h4 class="nmt">Warmer than Wool</h4>
           <p>Alpaca fibers are<br> completely hollow, which<br> enable them to trap  more<br> heat than sheep wool.</p>
         </div>
       </div>  
       <div class="flex-container product-benefits-wrapper">
         <div class="tac half">
           <img src="{{'water.png' | asset_url}}" class="icon" />
-          <h4>Thermoregulating & Waterproof</h4>
+          <h4 class="nmt">Thermoregulating &<br class="mid-break"> Waterproof</h4>
           <p>Alpaca fibers have a hollow<br>core, allowing their fleece<br> to provide insulation and<br> wick moisture.</p>
         </div>
         <div class="tac half product-benefits-wrapper">
           <img src="{{'poof.png' | asset_url}}" class="icon" />
-          <h4>Non-itchy & Hypoallergenic</h4>
+          <h4 class="nmt">Non-itchy & <br class="mid-break"> Hypoallergenic</h4>
           <p>Alpaca fleece is naturally<br> smooth and short, with<br>no grease, providing the<br> ultimate comfort.</p>
         </div>
       </div>
         <div class="flex-container product-benefits-wrapper">
         <div class="tac half">
           <img src="{{'leaf.png' | asset_url}}" class="icon" />
-          <h4>Eco-friendly & Sustainable</h4>
+          <h4 class="nmt">Eco-friendly & Sustainable</h4>
           <p>Alpacas step lightly on soil<br> and graze on native<br> grasses, which reduces<br> environmental impact.</p>
         </div>
         <div class="tac half">
           <img src="{{'ribbon.png' | asset_url}}" class="icon" />
-          <h4>Gives Back</h4>
+          <h4 class="nmt">Gives Back</h4>
           <p>A percentage of every<br> purchase goes towards<br> dressing pediatric cancer <br>patients in hospitals.</p>
         </div>
       </div>
