removes the code that made the header go from transparent and relatively position to fixed and white

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -96,9 +96,9 @@
 
   
   {% section 'header' %}
-
+  <section class="upper-pad">
     {{ content_for_layout }}
-
+  </section>
   {% section 'footer' %}
 
     
