--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -11,7 +11,7 @@
 {% javascript %}
 {% endjavascript %}
 
- <nav class="fw do" id="dnav">
+ <nav class="fw do fixed-nav" id="dnav">
   <div class="flex-container">
     <div class="flex-container jes">
       <a href="/collections/mens" class="mainlink"><p class="ib mens">Men</p></a>
@@ -108,7 +108,7 @@
   </div> 
  </nav> 
 
- <nav class="fw mo jes tac" id="dnav">
+ <nav class="fw mo jes tac fixed-nav" id="dnav">
   <div id="hamburger">
     <span></span>
     <span></span> 
