--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -672,6 +672,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
   background-repeat: no-repeat;
   background-size: cover;
 }
+.rounded-image { border-radius: 20px; }
 /*product pages*/
 @media only screen and (max-width: 799px) {
   .mid-break { display: none; }
