--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -80,9 +80,7 @@ html { padding-bottom: 0 !important; }
 .border-white { border: 1px solid #fff; }
 .border-gray { border: 1px solid #7b8284; }
 img { max-width: 100%; }
-@media only screen and (min-width: 1600px) {
-  #our-story .page-header {min-height: 650px;}
-} 
+
 @media only screen and (min-width: 1100px) {
   h1 { font-size: 67pt; } 
   h2 { font-size: 34pt; } 
@@ -123,7 +121,7 @@ img { max-width: 100%; }
     width: 400px;
     margin: 20px;
 }
-    #our-story .page-header { height: 500px;}
+    #our-story .page-header { background-size: 80% !important; height: 600px;}
   #dye { background-position: 350px; }
   body .product-benefits { background-size: contain;}
 }
@@ -139,7 +137,7 @@ img { max-width: 100%; }
     width: 300px;
     margin: 20px;
 }
-  #our-story .page-header { height: 400px;}
+  #our-story .page-header { height: 550px;}
   #dye { background-position: 250px; }
   .product-benefits .two-thirds .half { margin: 20px; }
 }
@@ -172,7 +170,7 @@ img { max-width: 100%; }
     margin: 10px;
 }
   #close-cart { margin-top: 18px;}
-  #our-story .page-header { height: 300px;}
+  #our-story .page-header { height: 400px;}
   .product-benefits .two-thirds .half { margin: 25px 15px; }
 }
 @media only screen and (min-width: 800px) {
