cleans up the header on desktop for the faq page

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -113,7 +113,7 @@ img { max-width: 100%; }
   }
   #faq .page-header {
     background-size: 1300px !important;
-    height: 400px;
+    height: 600px;
   }
   #materials-grid div, #materials-grid > img {
     height: 400px;
@@ -121,7 +121,7 @@ img { max-width: 100%; }
     width: 400px;
     margin: 20px;
 }
-    #our-story .page-header { background-size: 80% !important; height: 600px;}
+  #our-story .page-header { background-size: 80% !important; height: 600px;}
   #dye { background-position: 350px; }
   body .product-benefits { background-size: contain;}
 }
@@ -130,13 +130,16 @@ img { max-width: 100%; }
     background-image: url("{{'dflow-paca.png' | asset_url}}"); 
     background-position: bottom left;
   }
-    #faq .page-header {  height: 400px; }
-#materials-grid div, #materials-grid > img {
+#faq .page-header {
+    height: 500px;
+    background-size: 75% !important;
+}
+  #materials-grid div, #materials-grid > img {
     height: 300px;
     box-sizing: border-box;
     width: 300px;
     margin: 20px;
-}
+  }
   #our-story .page-header { height: 550px;}
   #dye { background-position: 250px; }
   .product-benefits .two-thirds .half { margin: 20px; }
@@ -150,7 +153,10 @@ img { max-width: 100%; }
     .index-padding-so { padding: 0 5% !important; } 
   .upper-pad {padding-top: 103px;}
 
-  #faq .page-header {  height: 300px; }
+  #faq .page-header {
+    height: 400px;
+    background-size: 75% !important;
+}
   p, table { font-size: 10pt; } 
   footer { padding: 50px; }
   #atf  { height: 40vw; max-height: 600px; }
@@ -224,6 +230,7 @@ img { max-width: 100%; }
     box-sizing: border-box;
     display: none;
 }
+
   #account-addresses .third, #account .third, #account-order .third{
     width: 100%;
     text-align: center;
@@ -263,6 +270,10 @@ img { max-width: 100%; }
   #our-story .page-header { min-height: 200px; }
     .upper-pad {padding-top: 94.55px;}
   #side-paca-text { padding-right: 30px; }
+   #faq .page-header {
+    height: 200px;
+    background-size: 75% !important;
+}
 }
 @media only screen and (min-width: 589px) {
   .accent-padding { padding: 20px; }
