makes ul lis the same size as the paragraphs

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -93,7 +93,7 @@ img { max-width: 100%; }
   #go-to-cart { top: 59px;}
   .upper-pad {padding-top: 112px;}
 
-  p, table, h5{ font-size: 12pt; } 
+  p, table, ul li, h5{ font-size: 12pt; } 
   #comparison {
     height: 350px;
     width: 850px;
@@ -157,7 +157,7 @@ img { max-width: 100%; }
     height: 400px;
     background-size: 75% !important;
 }
-  p, table { font-size: 10pt; } 
+  p, table, ul li { font-size: 10pt; } 
   footer { padding: 50px; }
   #atf  { height: 40vw; max-height: 600px; }
   #paca-intro, #charity-slide { 
@@ -247,7 +247,7 @@ img { max-width: 100%; }
 }
   #cart-order-summary { margin-top: 60px;}
   #close-cart { margin-top: 14px;}
-  p, table { font-size: 10pt; } 
+  p, table, ul li { font-size: 10pt; } 
   .flex-container-do { display: block !important; }
   #shaver { top: 450px; }
   .double-padding { padding: 20px; }
@@ -262,7 +262,7 @@ img { max-width: 100%; }
 @media only screen and (min-width: 589px) and (max-width: 799px) {
   h1 { font-size: 43pt; } 
   h2 { font-size: 30pt; } 
-  p, table { font-size: 10pt; }
+  p, table, ul li { font-size: 10pt; }
   h4 { font-size: 14pt; }
   #go-to-cart { top: 36.5px;}
   #atf  { height: 75vw; }
