creates align items flex start and adds it to the order pages per jess request

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -74,6 +74,7 @@ html { padding-bottom: 0 !important; }
 .three-fourths { width: 75%; }
 .third { width: 33%; }
 .fe { align-self: flex-end; }
+.aifs { align-items: flex-start; }
 .jes { justify-content: space-evenly; }
 .jsb { justify-content: space-between }
 .jcc { justify-content: center; }
@@ -201,8 +202,6 @@ img { max-width: 100%; }
   .collection .page-header { height: 400px; }
   #faq .faq .flex-container-no { align-items: flex-start; }
   .prog-bar { margin-bottom: 50px; }
-  .half-do { width: 50%; }
-  .double-padding { padding: 50px; }
   .double-padding-tbo { padding: 50px 0 ; }
   #choose-intro {
     justify-content: center;
