--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -1,11 +1,6 @@
-<style>
-  nav {
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
-    background: white;
-  }
-</style> 
+
 <main id="account-addresses" class="customer">  
-<section class="index-padding flex-container-do">
+<section class="index-padding flex-container-do aifs">
    <div class="third accent-padding">
         <h3 class="accent">Your Account</h3>
         <ul>
