--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -1,6 +1,6 @@
  
 <main id="account-order" class="customer">       
- <section class="index-padding flex-container-do">
+ <section class="index-padding flex-container-do aifs">
    <div class="third accent-padding">
         <h3 class="accent">Your Account</h3>
         <ul>
