updates the padding and margins on the side bar and the main page so that they line up when aligned in flex start

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -276,6 +276,7 @@ img { max-width: 100%; }
 }
 @media only screen and (min-width: 589px) {
   .accent-padding { padding: 20px; }
+  .accent-padding-so { padding: 0 20px; }
   .accent-padding-to { padding-top: 20px; }
   .accent-padding-tb { padding: 20px 0;}
   .half { width: 50%; box-sizing: border-box; }
@@ -345,6 +346,7 @@ img { max-width: 100%; }
   .flex-container { display: block; }
   .accent-padding { padding: 10px; }
   .accent-padding-tb { padding: 10px 0;  }
+  .accent-padding-so { padding: 0 10px; }
   #go-to-cart { top: 26.5px;}
   #atf { height: 90vw; }
   footer section {  margin: 10px;}
