--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -2,7 +2,7 @@
 <main id="account" class="customer">	     
 	<section class="index-padding flex-container-do aifs">
     <div class="third accent-padding">
-        <h3 class="accent">Your Account</h3>
+        <h3 class="accent nmt">Your Account</h3>
         <ul>
           <li><h4><a href="/account" class="current">Your Orders</a></h4></li>
           <li><h4><a href="/account/addresses">View Addresses</a></h4></li>
