--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,12 +1,6 @@
-<style>
-nav {
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
-    background: white;
-}
-</style>    
 
     <main id="page" class="contact-us">	     
-      <section class="flex-container index-padding">
+      <section class="flex-container index-padding aifs">
         <div class="half double-padding">
           <h3 class="nm">Contact Us</h3>
           <p>Our customer service goal is simple:</p>
