adds int eh first string of desktop hearts and places them

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -122,6 +122,12 @@ img { max-width: 100%; }
     width: 400px;
     margin: 20px;
 }
+  #hd1 {
+    width: 17vw;
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
   #our-story .page-header { background-size: 80% !important; height: 600px;}
   #dye { background-position: 350px; }
   body .product-benefits { background-size: contain;}
@@ -134,6 +140,12 @@ img { max-width: 100%; }
 #faq .page-header {
     height: 500px;
     background-size: 75% !important;
+}
+#hd1 {
+    width: 11vw;
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 20px;
 }
   #materials-grid div, #materials-grid > img {
     height: 300px;
@@ -157,6 +169,12 @@ img { max-width: 100%; }
   #faq .page-header {
     height: 400px;
     background-size: 75% !important;
+}
+#hd1 {
+    position: absolute;
+    width: 11vw;
+    margin-left: 223px;
+    margin-top: -20px;
 }
   p, table, ul li { font-size: 10pt; } 
   footer { padding: 50px; }
@@ -505,7 +523,7 @@ footer form {
 }
 .social-icons img { max-width: 30px; margin: 5px; }
 /*index page*/
- #atf-text { margin-left: 20%; }
+ #atf-text { margin-left: 10%; }
 #atf { 
   background-image: url("{{'atf.png' | asset_url}}");
   background-size: cover;
