--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -6,6 +6,7 @@
     <div class="connect button ib" id="cta">
       <a href="/collections/women"><p class="nm tac">Shop Collection</p></a>
     </div>
+    <img src="{{'hearts-desktop1.png' | asset_url}}" class="heart-icons" id="hd1"/>
   </div>
 </section>
 <section class="double-padding flex-container-no" id="gifting">
@@ -27,8 +28,6 @@
   </div>
   <img src="{{'sewing.jpg' | asset_url}}" class="fw third" />
 </section>
-
- 
 
 
 <section class="page-header do">
