styles and places hearts on desktop

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -124,10 +124,19 @@ img { max-width: 100%; }
 }
   #hd1 {
     width: 17vw;
-    position: absolute;
     margin-top: 20px;
     margin-left: 20px;
   }
+  #hd2 {
+    width: 5vw;
+    margin-top: 70px;
+    margin-left: -192px;
+}
+#hd3 {
+    margin-left: 42vw;
+    width: 11vw;
+    margin-top: -52px;
+}
   #our-story .page-header { background-size: 80% !important; height: 600px;}
   #dye { background-position: 350px; }
   body .product-benefits { background-size: contain;}
@@ -143,9 +152,18 @@ img { max-width: 100%; }
 }
 #hd1 {
     width: 11vw;
-    position: absolute;
     margin-top: 20px;
     margin-left: 20px;
+}
+#hd2 {
+    width: 3vw;
+    margin-top: 57px;
+    margin-left: -139px;
+}
+#hd3 {
+    margin-left: 50vw;
+    width: 7vw;
+    margin-top: -50px;
 }
   #materials-grid div, #materials-grid > img {
     height: 300px;
@@ -171,10 +189,19 @@ img { max-width: 100%; }
     background-size: 75% !important;
 }
 #hd1 {
-    position: absolute;
     width: 11vw;
     margin-left: 223px;
     margin-top: -20px;
+}
+#hd2  {
+    width: 3vw;
+    margin-top: 53px;
+    margin-left: -129px;
+}
+#hd3 {
+    margin-left: 50vw;
+    width: 7vw;
+    margin-top: -50px;
 }
   p, table, ul li { font-size: 10pt; } 
   footer { padding: 50px; }
@@ -209,6 +236,7 @@ img { max-width: 100%; }
     padding: 0 50px;
     justify-content: center;
   }
+  #materials-grid { padding: 0 50px 50px 50px; }
   .faq { padding: 50px 100px !important; }
   .collection .quarter { max-width: 200px; }
   .collection .three-fourths { padding: 50px 20px; }
@@ -220,6 +248,7 @@ img { max-width: 100%; }
   .collection .page-header { height: 400px; }
   #faq .faq .flex-container-no { align-items: flex-start; }
   .prog-bar { margin-bottom: 50px; }
+  .double-padding { padding: 50px; }
   .double-padding-tbo { padding: 50px 0 ; }
   #choose-intro {
     justify-content: center;
@@ -523,6 +552,7 @@ footer form {
 }
 .social-icons img { max-width: 30px; margin: 5px; }
 /*index page*/
+.heart-icons { position: absolute;}
  #atf-text { margin-left: 10%; }
 #atf { 
   background-image: url("{{'atf.png' | asset_url}}");
@@ -1463,6 +1493,7 @@ table .lg { background-color: #d1cdcd; }
   vertical-align: middle;
   margin-bottom: 5px;
 }
+.double-padding { padding: 50px; }
 .double-padding-to { padding-top: 50px; }
 #account-pal {
     margin-top: -20px;
