--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -6,7 +6,7 @@
     <div class="connect button ib" id="cta">
       <a href="/collections/women"><p class="nm tac">Shop Collection</p></a>
     </div>
-    <img src="{{'hearts-desktop1.png' | asset_url}}" class="heart-icons" id="hd1"/>
+    <img src="{{'hearts-desktop1.png' | asset_url}}" class="heart-icons do" id="hd1"/>
   </div>
 </section>
 <section class="double-padding flex-container-no" id="gifting">
@@ -18,9 +18,11 @@
     <div class="button ib" id="learn-cta">
       <a href="/pages/our-story"><p class="nm tac">Our Story</p></a>
     </div>
+        <img src="{{'hearts-desktop2.png' | asset_url}}" class="heart-icons do" id="hd2"/>
+
   </div>
 </section>
-<section class="flex-container-no double-padding jcc" id="materials-grid">
+<section class="flex-container-no jcc" id="materials-grid">
   <img src="{{'newfleece.png' | asset_url}}"  class="fw third"/>
   <div class="paca-facts tac accent-padding background-blue">
     <img src="{{'ribbon.png' | asset_url}}" class="icon third" />
@@ -28,6 +30,7 @@
   </div>
   <img src="{{'sewing.jpg' | asset_url}}" class="fw third" />
 </section>
+  <img src="{{'hearts-desktop3.png' | asset_url}}" class="heart-icons do" id="hd3"/>
 
 
 <section class="page-header do">
