adds in html to for new shop cta section

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -562,6 +562,7 @@ footer form {
   background-color: #fdf3ed;
   box-sizing: border-box;
 } 
+#sock-preview-benefits {box-shadow: 0px 5px 5px 0px rgba(0,0,0,.1);}
 .paca-flip-benefits  {
     border: 2px solid #f5fcfc;
     border-radius: 20px;
@@ -575,6 +576,13 @@ footer form {
     margin: 0 auto;
     display: block;
     max-width: 500px;
+}
+#shop-all-cta {
+  background-color: #ffebda;
+  background-image: url("{{'dflow-paca.png' | asset_url}}");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: 40%;
 }
 #mobile-sock { margin-bottom: 50px; }
 #mission { max-width: 650px; margin: 0 auto; }
