--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -30,13 +30,15 @@
   </div>
   <img src="{{'sewing.jpg' | asset_url}}" class="fw third" />
 </section>
-  <img src="{{'hearts-desktop3.png' | asset_url}}" class="heart-icons do" id="hd3"/>
-
-
-<section class="page-header do">
+<img src="{{'hearts-desktop3.png' | asset_url}}" class="heart-icons do" id="hd3"/>
+<section class="page-header do" id="sock-preview-benefits">
  <div class="flex-container">
     <div class="sock-preview accent-padding half">
-      <img src="{{'bombas_socksample.png' | asset_url}}" />
+      <div class="flex-container-no jes">
+        <div class="left-arrow"><p class="large">⌃</p></div>
+        <img src="{{'bombas_socksample.png' | asset_url}}" />
+        <div class="right-arrow"><p class="large">⌃</p></div>
+      </div>
       <div class="flex-container-no jes">
         <p><b>Athletic</b></p>
         <p class="current"><b>Casual</b></p>
@@ -109,7 +111,23 @@
       <p class="clickable"><b>Dress</b></p>
     </div>
 </section>
-<section>
+<section class="flex-container-no double-padding" id="shop-all-cta">
+  <div class="two-thirds tac">
+    <h3>"The world's comfiest sock." - Chicago Times</h3>
+    <div class="ib">
+      <img src="{{'' | asset_url}}" class="shop-pacas">
+      <p>Shop Men</p>
+    </div>
+    <div class="ib">
+      <img src="{{'' | asset_url}}" class="shop-pacas">
+      <p>Shop Women</p>
+    </div>
+    <div class="ib">
+      <img src="{{'' | asset_url}}" class="shop-pacas">
+      <p>Shop Kids</p>
+    </div>
+  </div>
+  <div class="third"></div>
 </section>
 
 
