cleans up some of the spacing on the new index page and fixes a bug that was causing padding on the flow on mobile

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -143,7 +143,7 @@ img { max-width: 100%; }
 }
 @media only screen and (min-width: 1100px) and (max-width: 1400px) {
    #paca-intro, #charity-slide { 
-    background-image: url("{{'dflow-paca.png' | asset_url}}"); 
+    background-image: url("{{'flow-paca.png' | asset_url}}"); 
     background-position: bottom left;
   }
 #faq .page-header {
@@ -151,18 +151,18 @@ img { max-width: 100%; }
     background-size: 75% !important;
 }
 #hd1 {
-    width: 11vw;
+    width: 13vw;
     margin-top: 20px;
     margin-left: 20px;
 }
 #hd2 {
-    width: 3vw;
-    margin-top: 57px;
+    width: 4vw;
+    margin-top: 62px;
     margin-left: -139px;
 }
 #hd3 {
-    margin-left: 50vw;
-    width: 7vw;
+    margin-left: 46vw;
+    width: 9vw;
     margin-top: -50px;
 }
   #materials-grid div, #materials-grid > img {
@@ -189,18 +189,18 @@ img { max-width: 100%; }
     background-size: 75% !important;
 }
 #hd1 {
-    width: 11vw;
+    width: 13vw;
     margin-left: 223px;
     margin-top: -20px;
 }
 #hd2  {
-    width: 3vw;
+    width: 4vw;
     margin-top: 53px;
     margin-left: -129px;
 }
 #hd3 {
-    margin-left: 50vw;
-    width: 7vw;
+    margin-left: 47vw;
+    width: 8vw;
     margin-top: -50px;
 }
   p, table, ul li { font-size: 10pt; } 
@@ -581,8 +581,9 @@ footer form {
   background-color: #ffebda;
   background-image: url("{{'dflow-paca.png' | asset_url}}");
   background-repeat: no-repeat;
-  background-position: bottom right;
-  background-size: 40%;
+  background-position: 75vw bottom;
+     height: 300px;
+    background-size: contain;
 }
 #mobile-sock { margin-bottom: 50px; }
 #mission { max-width: 650px; margin: 0 auto; }
