--- a/templates/page.flow.liquid
+++ b/templates/page.flow.liquid
@@ -3,9 +3,9 @@
   #shopify-section-header { display: none !important;}
   footer { display: none !important;}
   main { padding-top: 0 !important; }
+ .upper-pad { padding-top: 0 !important;}
 }
  #dnav { background: white; }
-
 </style>
 <main>
 <div id="flow">
